--- a/style.css
+++ b/style.css
@@ -249,6 +249,18 @@ body {
     padding-left: 10px;
 }
 
+#bg-video {
+    z-index: -1;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    opacity: 0;
+    transition: 2s;
+}
+
 .credit {
     position: absolute;
     bottom: 10px;
@@ -267,10 +279,10 @@ body {
     opacity: 0.5;
     font-size: 0.7em;
     transition: 0.6s;
-}
-
-.joke:hover {
-    opacity: 0;
+    cursor: default;
+    a {
+        color: white;
+    }
 }
 
 /* Canvas Background */
